# gcp-audio

./: .gitignore  README.md  main.py  pyproject.toml
utils/: convert_video_to_audio.sh
